# sops-shell-sync

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: main.rs  parser.rs  sops.rs  sync.rs
