[package]
name = "sops-shell"
version = "0.1.0"
edition = "2021"
description = "Sync secrets from shell commands to SOPS encrypted files"
authors = ["Ritiek <ritiek@proton.me>"]
license = "MIT"

[[bin]]
name = "sops-shell"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.12"

